--- a/app/src/main/res/layout/comment_view_item.xml
+++ b/app/src/main/res/layout/comment_view_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="412dp"
-        android:layout_height="278dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
